syntax = "proto3";

package messari.evm_token.v1;

message Tokens {
  repeated Token items = 1;
}

message Token {
  string address = 1;
  string name = 2;
  string symbol = 3;
  uint64 decimals = 4;
}

message Transfers {
  repeated Transfer items = 1;
}

message Transfer {
  string tx_hash = 1;
  uint64 block_number = 2;
  uint64 timestamp = 3;
  uint32 log_index = 4;
  Token token = 5;
  string to = 6;
  string from = 7;
  string amount = 8; // BigInt, in token's native amount
  optional string amount_usd = 9;
  repeated TokenBalance balance_changes = 10;
}

// balance changes
message TokenBalance {
  uint64 log_ordinal = 1;
  Token token = 2;
  string address = 3; // account address of the balance change
  string old_balance = 4; // BigInt, in token's native amount
  string new_balance = 5; // BigInt, in token's native amount
  optional int32 reason = 6;
}
